[tool.poetry]
name = "git-class"
version = "0.1.0"
description = ""
authors = ["Danziger <ben@danziger.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
ipython = "^8.29.0"
numpy = "^2.1.3"
yfinance = "^0.2.49"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
